
syntax = "proto3";

package otherPackage;

service otherService {
  rpc otherTrigger (testIn) returns (testOut) {}
}

message testIn {
  string name = 1;
}

message testOut {
  string message = 1;
  int32 number = 2;
}